--- a/_config.yml
+++ b/_config.yml
@@ -22,13 +22,13 @@ repository               : "academicpages/academicpages.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
-  pronouns         : # example: "she/her"  
+  name             : "Hongyi Zhao"
+  pronouns         : # example: "she"  
   bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  location         : "Xi'an, Shaanxi, China"
+  employer         : "Xidian University"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "zhaohongyi@stu.xidian.edu.cn" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
